# camlidar_module

./: CMakeLists.txt  README.md  ca.rviz  camlidar_rviz.rviz  gmon.out  package.xml
arduino_nano_code/: SimpleTimer.cpp  SimpleTimer.h  arduino_nano_code.ino
arduino_pps_code/pps/: pps.ino
camera_drivers/: How to use.txt
include/: camlidar_sync_align.h  improved_topic_logger.h  keyinput.h
launch/: camlidar_sync.launch  debug_camlidar_sync.launch  lidar_module.launch  lidar_only.launch  only_cam.launch  snapshot_from_bag.launch
msg/: imu_serial.msg  trg_msg.msg
notused/arduino_nano_code/: arduino_nano_code.ino  arduino_timer_code.txt
notused/arduino_pps_code_test/pps/: pps.ino
params/: bluefox_vlp16.yaml  bluefox_vlp16_BS.yaml
src/: main.cpp
