<?xml version="1.0"?>
<package>
  <name>camlidar_module</name>
  <version>0.0.0</version>
  <description>camlidar_module package</description>

  <maintainer email="Changhyeon@gmail.com">ChanghyeonKim</maintainer>


  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
